lcb: Refactored predicates (#367)
* lcb: Removed case distinction for predicates when rendering

* lcb: Generate predicate with encoding function

This commit only handles the trivial encodings.

* lcb: Generated predicates for arithmetical field access functions

* lcb: Generate predices for shifted immediates

* lcb: Setup tests for predicates

* lcb: Refactored into separate classes

* lcb: Setup more tests

* lcb: Fixed mask by 1

* lcb: Fixed tests

* viam: Don't create default predicates

* lcb: Removed printing of file

* chore: Make CheckStyle happy

* lcb: Removed unencodable instructions

* lcb: Updated tests

* lcb: Changed API